# herdr

./: .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  NOTICE  PHASE4_PLAN.md  README.md  quickstart.sh
.claude/skills/herdr-check/: SKILL.md
.claude/skills/herdr-cost/: SKILL.md
.claude/skills/herdr-hooks/: SKILL.md
.claude/skills/herdr-map/: SKILL.md
.claude/skills/herdr-status/: SKILL.md
crates/claudectl-core/: Cargo.toml
crates/claudectl-core/src/: discovery.rs  git.rs  history.rs  hookstate.rs  lib.rs  models.rs  monitor.rs  process.rs  projects.rs  session.rs  theme.rs  transcript.rs
crates/claudectl-core/src/terminals/: mod.rs  tmux.rs
crates/claudectl-tui/: Cargo.toml
crates/claudectl-tui/src/: app.rs  demo.rs
crates/claudectl-tui/src/ui/: approval.rs  chat.rs  detail.rs  fleet.rs  help.rs  mod.rs  table.rs
docs/: CLAUDECTL_MAP.md  COMPARABLES.md  EVENT_LOOP_PLAN.md  HANDOFF.md  PHASE3_PLAN.md  PROJECT_OVERVIEW.md  REFERENCES.md
examples/: projects.rs  roster.rs
src/: hookcmd.rs  main.rs  watcher.rs
